fix: deploy BE on netlify

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "โปรเจกต์เว็บแอปพลิเคชันสำหรับคำนวณและบันทึกเวลาทำงานล่วงเวลา (OT) พร้อมระบบเก็บข้อมูลลงไฟล์ `data.json` โดยใช้ Node.js และ Express ตกแต่งด้วยโทนสีเขียว และฟอนต์ Kanit จาก Google Fonts",
   "dependencies": {
     "@netlify/blobs": "^10.7.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.18.0"
   }
 }
